# AIE_Cert_Challange

./: .env.example  .gitignore  README.md  pyproject.toml
evaluation/: __init__.py  compare_pipelines.py  config.py  generate_testset.py  run_all.py  run_evaluation.py
evaluation_results/: comparison.json  eval_advanced_20260303_195439.json  eval_basic_20260303_155256.json  testset.csv
prompts/: compliance_evaluator.md  orchestrator.md  proposal_reviewer.md  report.md  spec_analyzer.md  standards_lookup.md
scripts/: generate_synthetic_proposal.py
src/: agents.py  app.py  ingestion.py  ingestion_advanced.py  models.py  tools.py  tools_advanced.py
tests/: test_agents.py  test_ingestion.py  test_tools.py
